--- a/ProPonti/Na stiahnutie.html
+++ b/ProPonti/Na stiahnutie.html
@@ -8,28 +8,28 @@
    <link rel="stylesheet" type="text/css" href="css/general.css" />
    <link rel="stylesheet" type="text/css" href="css/header.css" />
    <link rel="stylesheet" type="text/css" href="css/feature.css" />
+   <link rel="stylesheet" href="text/css" href="css">
    <link rel="shortcut icon" type="image/x-icon" href="/ProPonti/Fotky/favicon.ico">
 </head>
 
-<header>
-<nav class="main-nav">
-    
-    <ul class="menu container">
-        <img src="../ProPonti/Fotky/lOGO.png" alt="">
-        <li><a href="Home">Home</a></li>
-        <li><a href="O nás">O nás</a></li>
-        <li><a href="Referencie">Referencie</a></li>
-        <li><a href="Blog">Blog</a></li>
-        <li><a href="Na stiahnutie">Na stiahnutie</a></li>
-        <li><a href="Kontaktssss">Kontakt</a></li>
-    
-    </ul>
-</nav>
 
-<main>
 
-</header>
 <body>
+
+    <body>
+        <div class="menu-container">
+          <div class="menu-toggle" id="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="dropdown-menu" id="dropdown-menu">
+            <li><a href="#">Item 1</a></li>
+            <li><a href="#">Item 2</a></li>
+            <li><a href="#">Item 3</a></li>
+          </ul>
+        </div>
+      </body>
     <table>
 <tr>
     <td><img class="Image" src="../ProPonti/Fotky/bridges.png" alt=""></td>
