--- a/ProPonti/Index/index.html
+++ b/ProPonti/Index/index.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" type="text/css" href="/ProPonti/Index/slideshow.css" />
    <link rel="stylesheet" type="text/css" href="/ProPonti/Index/index.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/ProPonti/Fotky/favicon.ico">
+
 </head>
 
 <body>
@@ -87,25 +88,27 @@
   <br>
     <figure class="Logoanddesc">
       <div class="description">
+        <img class="circles" style="width: 650px; top: 30%;left: 45%;" src="/ProPonti/Images/hiclipart.com (4).png">
           Slovo <strong>Pont</strong>, ktoré pochádza z latinčiny, sa v mierne zmenených podobách už od pradávna používalo pre označenie mosta a mostných konštrukcií. 
         Práve z tohto slovného základu vychádza aj názov <strong>ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.
       </div>
       <div class="PPlogo">
+        <img class="circles" style="width: 800px; top: 50%;left: 45%;" src="/ProPonti/Images/hiclipart.com (4).png">
       <img src="/ProPonti/Images/logo_proponti_s_popisom.png" style="width:100%">   
       </div>
     </figure>
   
   <article class="activity">
-  <div class="company"><h2>Inžinierska činnosť</h2>Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
+  <div class="company"> <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Inžinierska činnosť</h2></div><div class="companyfunctions">Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
       Vypracovanie kompletnej výkresovej dokumentácie a výpočtov pre projekt územného rozhodnutia, 
-      stavebného povolenia a realizácie stavby.</h3></div>
-  <div class="company"><h2>Expertízna činnosť</h2>Činnosť v oblasti výskumných projektov 
-      a odborných posudkov inžinierskych stavieb ako aj prepočty zaťažiteľnosti mostov.</h3></div>
-  <div class="company"><h2>Diagnostická činnosť</h2>Firma sa venuje aj hlavným prehliadkam, diagnostike mostov a 
-      konštrukcií, zaťažovacím skúškam a návrhom sanačných a rekonštrukčných opatrení.</h3></div>
-  <div class="company"><h2>Analytická činnosť</h2>Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
-      (diagnostika, menšie sanácie, monitoring trhlín, kontrola ložísk, lokálna diagnostika stavu predpätia, meranie priehybov, osádzanie tenzometrov pre tenzometrické merania, ...).</h3></div>
-  <div class="company"><h2>Ostatná činnosť</h2>Publikačná a editačná činnosť. Organizovanie spoločenských a odborných podujatí a vydavateľská činnosť  </h3></div>
+      stavebného povolenia a realizácie stavby.</h3></div></div>
+ <div class="company"><img class="circles deg72" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Expertízna činnosť</h2></div><div class="companyfunctions">Činnosť v oblasti výskumných projektov 
+      a odborných posudkov inžinierskych stavieb ako aj prepočty zaťažiteľnosti mostov.</h3></div></div>
+ <div class="company"><img class="circles deg144" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Diagnostická činnosť</h2></div><div class="companyfunctions">Firma sa venuje aj hlavným prehliadkam, diagnostike mostov a 
+      konštrukcií, zaťažovacím skúškam a návrhom sanačných a rekonštrukčných opatrení.</h3></div></div>
+ <div class="company"><img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Analytická činnosť</h2></div><div class="companyfunctions">Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
+      (diagnostika, menšie sanácie, monitoring trhlín, kontrola ložísk, lokálna diagnostika stavu predpätia, meranie priehybov, osádzanie tenzometrov pre tenzometrické merania, ...).</h3></div></div>
+ <div class="company"><img class="circles deg288" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Ostatná činnosť</h2></div><div class="companyfunctions">Publikačná a editačná činnosť. Organizovanie spoločenských a odborných podujatí a vydavateľská činnosť </h3></div></div>
   </article>
 
   <div class="strip">
@@ -129,6 +132,27 @@
     
 </div>
 
+<article class="projects">
+  <figure class="head">Projekty</figure>
+
+  <figure class="photos">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/most_topolcany.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/11.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/bailey_bridge_kunov.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/coburgov_most_pohorela.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/hamre.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/vrable.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/senica.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/mosty_motorky.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/most_viz_1.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/presov.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/zborov_5.jpg" alt="">
+    <img class="project-photos" src="/ProPonti/Images/Slideshow/zborov_6.jpg" alt="">
+  </figure>
+</article>
+
+
+
   <footer>
     <section class="quote">
     <p> <i class="underline">.... každá cesta, aj našim životom, je len spojnicou medzi mostami .... </i></p>
@@ -141,14 +165,16 @@
         <a href="https://sk.linkedin.com/in/peter-paulik-8307629"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/LinkedIN.png"></a>   
         <a href="https://www.youtube.com/user/perpatres1/videos"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/Youtube.png"></a>
         <a href="https://blog.sme.sk/peterpaulik"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/sme.blog.png"></a>
-        <a href="http://www.fib-sk.sk/clenovia"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/logo_green.png"></a></section>
+        <a href="http://www.fib-sk.sk/clenovia"><img class="socials" style="background-color: white;" src="/ProPonti/Images/Kontakt_Logá/logo_green.png"></a></section>
         
     </section>
 
     <section class="footer-nav" style="text-decoration: none">
         <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Contacts/Kontakty.html">Kontakt</a>
         <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/PDFs/patresova_osmicka.pdf">Patresova osmička</a>
-        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Autorizačné osvedčenie</a></section>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Autorizačné osvedčenie</a>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Na stiahnutie</a>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Referencie</a></section>
 
     <section class="footer-text"style="text-underline-offset: 5px;">   
 
