--- a/ProPonti/Index/index.html
+++ b/ProPonti/Index/index.html
@@ -89,11 +89,11 @@
     <figure class="Logoanddesc">
       <div class="description">
         <img class="circles" style="width: 650px; top: 30%;left: 45%;" src="/ProPonti/Images/hiclipart.com (4).png">
-          Slovo <strong>Pont</strong>, ktoré pochádza z latinčiny, sa v mierne zmenených podobách už od pradávna používalo pre označenie mosta a mostných konštrukcií. 
-        Práve z tohto slovného základu vychádza aj názov <strong>ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.
+          Slovo <strong style="color: red;">Pont</strong>, ktoré pochádza z latinčiny, sa v mierne zmenených podobách už od pradávna používalo pre označenie mosta a mostných konštrukcií. 
+        Práve z tohto slovného základu vychádza aj názov <strong style="color: red;">ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.
       </div>
       <div class="PPlogo">
-        <img class="circles" style="width: 800px; top: 50%;left: 45%;" src="/ProPonti/Images/hiclipart.com (4).png">
+        <img class="circles" style="width: 800px; top: 50%;left: 45%;overflow: hidden;" src="/ProPonti/Images/hiclipart.com (4).png">
       <img src="/ProPonti/Images/logo_proponti_s_popisom.png" style="width:100%">   
       </div>
     </figure>
@@ -106,7 +106,7 @@
       a odborných posudkov inžinierskych stavieb ako aj prepočty zaťažiteľnosti mostov.</h3></div></div>
  <div class="company"><img class="circles deg144" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Diagnostická činnosť</h2></div><div class="companyfunctions">Firma sa venuje aj hlavným prehliadkam, diagnostike mostov a 
       konštrukcií, zaťažovacím skúškam a návrhom sanačných a rekonštrukčných opatrení.</h3></div></div>
- <div class="company"><img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Analytická činnosť</h2></div><div class="companyfunctions">Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
+ <div class="company"><img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2 style="margin-bottom: 50px;">Analytická činnosť</h2></div><div class="companyfunctions">Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
       (diagnostika, menšie sanácie, monitoring trhlín, kontrola ložísk, lokálna diagnostika stavu predpätia, meranie priehybov, osádzanie tenzometrov pre tenzometrické merania, ...).</h3></div></div>
  <div class="company"><img class="circles deg288" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Ostatná činnosť</h2></div><div class="companyfunctions">Publikačná a editačná činnosť. Organizovanie spoločenských a odborných podujatí a vydavateľská činnosť </h3></div></div>
   </article>
@@ -136,18 +136,90 @@
   <figure class="head">Projekty</figure>
 
   <figure class="photos">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/most_topolcany.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/11.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/bailey_bridge_kunov.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/coburgov_most_pohorela.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/hamre.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/vrable.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/senica.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/mosty_motorky.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/most_viz_1.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/presov.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/zborov_5.jpg" alt="">
-    <img class="project-photos" src="/ProPonti/Images/Slideshow/zborov_6.jpg" alt="">
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/most_topolcany.jpg" alt="">
+      <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/11.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/bailey_bridge_kunov.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+    
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/coburgov_most_pohorela.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/hamre.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/vrable.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/senica.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/mosty_motorky.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/most_viz_1.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/presov.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/zborov_5.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
+    <div class="image-container">
+    <img class="zoomable-image" src="/ProPonti/Images/Slideshow/zborov_6.jpg" alt="">
+    <div class="overlay">
+      <img src="/ProPonti/Images/camera.revert.png" alt="Camera Icon" class="icon">
+      </div>
+    </div>
+
   </figure>
 </article>
 
