--- a/ProPonti/Index/index.html
+++ b/ProPonti/Index/index.html
@@ -88,12 +88,12 @@
   <br>
     <figure class="Logoanddesc">
       <div class="description">
-        <img class="circles" style="width: 650px; top: 30%;left: 45%;" src="/ProPonti/Images/hiclipart.com (4).png">
-          Slovo <strong style="color: red;">Pont</strong>, ktoré pochádza z latinčiny, sa v mierne zmenených podobách už od pradávna používalo pre označenie mosta a mostných konštrukcií. 
-        Práve z tohto slovného základu vychádza aj názov <strong style="color: red;">ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.
+        <img class="descircles" src="/ProPonti/Images/hiclipart.com (4).png">
+          <div class="texts">Slovo <strong style="color: red;">Pont</strong>, ktoré pochádza z latinčiny, sa v mierne zmenených podobách už od pradávna používalo pre označenie mosta a mostných konštrukcií. 
+        Práve z tohto slovného základu vychádza aj názov <strong style="color: red;">ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.</div>
       </div>
       <div class="PPlogo">
-        <img class="circles" style="width: 800px; top: 50%;left: 45%;overflow: hidden;" src="/ProPonti/Images/hiclipart.com (4).png">
+        <img class="circles" style="width: 1000px; overflow: hidden; max-width: 1000px;" src="/ProPonti/Images/hiclipart.com (4).png">
       <img src="/ProPonti/Images/logo_proponti_s_popisom.png" style="width:100%">   
       </div>
     </figure>
