--- a/ProPonti/Index/index.html
+++ b/ProPonti/Index/index.html
@@ -93,8 +93,8 @@
         Práve z tohto slovného základu vychádza aj názov <strong style="color: red;">ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.</div>
       </div>
       <div class="PPlogo">
-        <img class="circles" style="width: 1000px; overflow: hidden; max-width: 1000px;" src="/ProPonti/Images/hiclipart.com (4).png">
-      <img src="/ProPonti/Images/logo_proponti_s_popisom.png" style="width:100%">   
+        <img class="maincircle" src="/ProPonti/Images/hiclipart.com (4).png">
+      <img class="ProPontibanner" src="/ProPonti/Images/logo_proponti_s_popisom.png">   
       </div>
     </figure>
   
