--- a/ProPonti/Index/index.html
+++ b/ProPonti/Index/index.html
@@ -99,16 +99,16 @@
     </figure>
   
   <article class="activity">
-  <div class="company"> <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Inžinierska činnosť</h2></div><div class="companyfunctions">Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
+  <div class="company show"> <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Inžinierska činnosť</h2></div><div class="companyfunctions">Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
       Vypracovanie kompletnej výkresovej dokumentácie a výpočtov pre projekt územného rozhodnutia, 
       stavebného povolenia a realizácie stavby.</h3></div></div>
- <div class="company"><img class="circles deg72" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Expertízna činnosť</h2></div><div class="companyfunctions">Činnosť v oblasti výskumných projektov 
+ <div class="company show"><img class="circles deg72" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Expertízna činnosť</h2></div><div class="companyfunctions">Činnosť v oblasti výskumných projektov 
       a odborných posudkov inžinierskych stavieb ako aj prepočty zaťažiteľnosti mostov.</h3></div></div>
- <div class="company"><img class="circles deg144" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Diagnostická činnosť</h2></div><div class="companyfunctions">Firma sa venuje aj hlavným prehliadkam, diagnostike mostov a 
+ <div class="company show"><img class="circles deg144" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Diagnostická činnosť</h2></div><div class="companyfunctions">Firma sa venuje aj hlavným prehliadkam, diagnostike mostov a 
       konštrukcií, zaťažovacím skúškam a návrhom sanačných a rekonštrukčných opatrení.</h3></div></div>
- <div class="company"><img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2 style="margin-bottom: 50px;">Analytická činnosť</h2></div><div class="companyfunctions">Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
+ <div class="company show"><img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2 style="margin-bottom: 50px;">Analytická činnosť</h2></div><div class="companyfunctions">Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
       (diagnostika, menšie sanácie, monitoring trhlín, kontrola ložísk, lokálna diagnostika stavu predpätia, meranie priehybov, osádzanie tenzometrov pre tenzometrické merania, ...).</h3></div></div>
- <div class="company"><img class="circles deg288" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Ostatná činnosť</h2></div><div class="companyfunctions">Publikačná a editačná činnosť. Organizovanie spoločenských a odborných podujatí a vydavateľská činnosť </h3></div></div>
+ <div class="company show"><img class="circles deg288" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Ostatná činnosť</h2></div><div class="companyfunctions">Publikačná a editačná činnosť. Organizovanie spoločenských a odborných podujatí a vydavateľská činnosť </h3></div></div>
   </article>
 
   <div class="strip">
