--- a/ProPonti/Index/index.html
+++ b/ProPonti/Index/index.html
@@ -99,7 +99,7 @@
     </figure>
   
   <article class="activity">
-  <div class="company show"> <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Inžinierska činnosť</h2></div><div class="companyfunctions">Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
+  <div class="company show"> <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Inžinierska činnosť</h2></div><div class="companyfunctions move">Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
       Vypracovanie kompletnej výkresovej dokumentácie a výpočtov pre projekt územného rozhodnutia, 
       stavebného povolenia a realizácie stavby.</h3></div></div>
  <div class="company show"><img class="circles deg72" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Expertízna činnosť</h2></div><div class="companyfunctions">Činnosť v oblasti výskumných projektov 
