--- a/ProPonti/Index/indexEN.html
+++ b/ProPonti/Index/indexEN.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-        <a href="index.html">
+        <a href="indexEN.html">
             <img class="LOGO" src="/ProPonti/Images/LogoProPonti-reverse.png">
         </a>
           <nav class="nav" id="menu-toggle" onclick="toggleMenu()">
@@ -27,16 +27,16 @@
               <span class="bar"></span>
             </div>
         <ul class="menu-container" id="dropdown-menu">
-            <li><a class="navigation" href="/ProPonti/Index/Index.html">HOME</a></li>
-            <li><a class="navigation" href="/ProPonti/Index/Diagnostics.html">DIAGNOSTIKY</a></li>
-            <li><a class="navigation" href="/ProPonti/Index/Reference.html">REFERENCIE</a></li>
-            <li><a class="navigation" href="/ProPonti/Index/Blog_sk.html">BLOG</a></li>
-            <li><a class="navigation" href="/ProPonti/Download/">NA STIAHNUTIE</a></li>
-            <li><a class="navigation" href="/ProPonti/Contacts/Contacts.html">KONTAKT</a></li>
+            <li><a class="navigation" href="/ProPonti/Index/indexEN.html">HOME</a></li>
+            <li><a class="navigation" href="/ProPonti/Index/diagnosticsEN.html">DIAGNOSTICS</a></li>
+            <li><a class="navigation" href="/ProPonti/Index/ReferenceEN.html">REFERENCES</a></li>
+            <li><a class="navigation" href="/ProPonti/Index/Blog_skEN.html">BLOG</a></li>
+            <li><a class="navigation" href="/ProPonti/Download/">DOWNLOAD</a></li>
+            <li><a class="navigation" href="/contacts/contactsEN.html">CONTACT</a></li>
         </ul></nav>
         <ul class="flags">
             <li><a class="flagsIMG" href="index.html"><img src="/ProPonti/Images/Kontakt_Logá/sk_sk.gif"></a></li>
-            <li><a class="flagsIMG" href="indexEN.html"><img src="/ProPonti/Images/Kontakt_Logá/en.gif"></a></li>
+            <li><a class="flagsIMG" href="general.html"><img src="/ProPonti/Images/Kontakt_Logá/en.gif"></a></li>
         </ul>     
   </header>
 
@@ -86,54 +86,78 @@
   </div>
 
   <br>
-    <figure class="Logoanddesc">
-      <div class="description">
+  <figure class="Logoanddesc">
+    <div class="description">
         <img class="descircles" src="/ProPonti/Images/hiclipart.com (4).png">
-          <div class="texts">Slovo <strong style="color: red;">Pont</strong>, ktoré pochádza z latinčiny, sa v mierne zmenených podobách už od pradávna používalo pre označenie mosta a mostných konštrukcií. 
-        Práve z tohto slovného základu vychádza aj názov <strong style="color: red;">ProPonti</strong>, ktorý by sa dal v slovenčine nahradiť aj slovným spojením pre-mosty.</div>
-      </div>
-      <div class="PPlogo">
+        <div class="texts">The word <strong style="color: red;">Pont</strong>, derived from Latin, has been used in slightly modified forms since ancient times to denote bridges and bridge structures. The name <strong style="color: red;">ProPonti</strong> is based on this word and could be translated in Slovak as "pre-mosty," meaning "for bridges."</div>
+    </div>
+    <div class="PPlogo">
         <img class="maincircle" src="/ProPonti/Images/hiclipart.com (4).png">
-      <img class="ProPontibanner" src="/ProPonti/Images/logo_proponti_s_popisom.png">   
-      </div>
-    </figure>
-  
-  <article class="activity">
-  <div class="company show"> <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Inžinierska činnosť</h2></div><div class="companyfunctions move">Činnosť autorizovaného stavebného inžiniera v oblasti statiky so špecializáciou na betónové konštrukcie, mosty a lávky pre peších. 
-      Vypracovanie kompletnej výkresovej dokumentácie a výpočtov pre projekt územného rozhodnutia, 
-      stavebného povolenia a realizácie stavby.</h3></div></div>
- <div class="company show"><img class="circles deg72" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Expertízna činnosť</h2></div><div class="companyfunctions">Činnosť v oblasti výskumných projektov 
-      a odborných posudkov inžinierskych stavieb ako aj prepočty zaťažiteľnosti mostov.</h3></div></div>
- <div class="company show"><img class="circles deg144" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Diagnostická činnosť</h2></div><div class="companyfunctions">Firma sa venuje aj hlavným prehliadkam, diagnostike mostov a 
-      konštrukcií, zaťažovacím skúškam a návrhom sanačných a rekonštrukčných opatrení.</h3></div></div>
- <div class="company show"><img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2 style="margin-bottom: 50px;">Analytická činnosť</h2></div><div class="companyfunctions">Zameranie konštrukcií 3D skenerom, prehliadky konštrukcií a mostov s využitím dronov, ako aj výškové práce zaškolenými horolezcami 
-      (diagnostika, menšie sanácie, monitoring trhlín, kontrola ložísk, lokálna diagnostika stavu predpätia, meranie priehybov, osádzanie tenzometrov pre tenzometrické merania, ...).</h3></div></div>
- <div class="company show"><img class="circles deg288" src="/ProPonti/Images/hiclipart.com (4).png"><div class="function"><h2>Ostatná činnosť</h2></div><div class="companyfunctions">Publikačná a editačná činnosť. Organizovanie spoločenských a odborných podujatí a vydavateľská činnosť </h3></div></div>
-  </article>
+        <img class="ProPontibanner" src="/ProPonti/Images/logo_proponti_s_popisom.png">
+    </div>
+</figure>
+
+<article class="activity">
+    <div class="company show">
+        <img class="circles" src="/ProPonti/Images/hiclipart.com (4).png">
+        <div class="function">
+            <h2>Engineering Activity</h2>
+        </div>
+        <div class="companyfunctions move">Authorized structural engineering activities in the field of statics with a specialization in concrete structures, bridges, and pedestrian walkways. Preparation of complete drawing documentation and calculations for territorial decision, building permit, and construction realization.</div>
+    </div>
+    <div class="company show">
+        <img class="circles deg72" src="/ProPonti/Images/hiclipart.com (4).png">
+        <div class="function">
+            <h2>Expertise Activity</h2>
+        </div>
+        <div class="companyfunctions">Activities in the field of research projects and expert assessments of engineering structures, as well as load capacity calculations for bridges.</div>
+    </div>
+    <div class="company show">
+        <img class="circles deg144" src="/ProPonti/Images/hiclipart.com (4).png">
+        <div class="function">
+            <h2>Diagnostic Activity</h2>
+        </div>
+        <div class="companyfunctions">The company also conducts major inspections, diagnostics of bridges and structures, load tests, and proposals for remedial and reconstruction measures.</div>
+    </div>
+    <div class="company show">
+        <img class="circles deg216" src="/ProPonti/Images/hiclipart.com (4).png">
+        <div class="function">
+            <h2 style="margin-bottom: 50px;">Analytical Activity</h2>
+        </div>
+        <div class="companyfunctions">Structural scanning with a 3D scanner, inspections of structures and bridges using drones, as well as height work by trained climbers (diagnostics, minor repairs, crack monitoring, bearing checks, local diagnostics of prestressing, measurement of deflections, installation of strain gauges for strain measurements, ...).</div>
+    </div>
+    <div class="company show">
+        <img class="circles deg288" src="/ProPonti/Images/hiclipart.com (4).png">
+        <div class="function">
+            <h2>Other Activity</h2>
+        </div>
+        <div class="companyfunctions">Publishing and editorial activities. Organization of social and professional events and publishing activities.</div>
+    </div>
+</article>
 
   <div class="strip">
     
         <div class="number-container">
             <a class="number">125</a>
-            <p class="a">projektov</p>
+            <p class="a">projects</p>
         </div>
         <div class="number-container">
             <a class="number">9</a>
-            <p class="a">členov tímu</p>
+            <p class="a">members of the team</p>
         </div>
         <div class="number-container">
             <a class="number">13</a>
-            <p class="a">rokov</p>
+            <p class="a">years</p>
         </div>
         <div class="number-container">
             <a class="number">54</a>
-            <p class="a">publikácii</p>
+            <p class="a">publications</p>
         </div>
     
 </div>
 
 <article class="projects">
-  <figure class="head">Projekty</figure>
+  <figure class="head">Projects</figure>
 
   <figure class="photos">
     <div class="image-container">
@@ -232,7 +256,7 @@
   </section>
     <section class="main-footer">
 
-        <p class="follow">SLEDUJTE NÁS</p>
+        <p class="follow">FOLLOW US</p>
         <section class="footer"><a href="https://www.facebook.com/ProPonti/"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/fb.png"></a>
         <a href="https://sk.linkedin.com/in/peter-paulik-8307629"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/LinkedIN.png"></a>   
         <a href="https://www.youtube.com/user/perpatres1/videos"><img class="socials" src="/ProPonti/Images/Kontakt_Logá/Youtube.png"></a>
@@ -242,11 +266,11 @@
     </section>
 
     <section class="footer-nav" style="text-decoration: none">
-        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Contacts/Kontakty.html">Kontakt</a>
-        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/PDFs/patresova_osmicka.pdf">Patresova osmička</a>
-        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Autorizačné osvedčenie</a>
-        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Na stiahnutie</a>
-        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Referencie</a></section>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Contacts/Kontakty.html">Contact</a>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/PDFs/patresova_osmicka.pdf">Patres´s eight</a>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Authorisation certificate</a>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">Download</a>
+        <a class="transition" onmouseover="applyTransition(this)" onmouseout="resetTransition(this)" href="/ProPonti/Images/autorizacne_paulik.jpg">References</a></section>
 
     <section class="footer-text"style="text-underline-offset: 5px;">   
 
